Bug 920787: The "Flags:" label in bug reports is badly aligned r=dkl a=sgreen

--- a/skins/standard/show_bug.css
+++ b/skins/standard/show_bug.css
@@ -26,9 +26,6 @@
     width: 10em;
 }
 
-.flags_label {
-    text-align: left;
-}
 table#flags {
     width: auto;
 }
